@@ -1,33 +1,55 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'org.greenrobot.greendao'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.jakewharton.butterknife'
 // gradle BuildVariants
 //Build Variants = Product Flavor + Build Type
 android {
-    compileSdkVersion 33
-    buildToolsVersion "29.0.2"
+    namespace "com.openapi.ks.free1"
+    compileSdk 34
+    ndkVersion "23.1.7779620"
     defaultConfig {
         applicationId "com.openapi.ks.free1"
-        minSdkVersion 19
-        targetSdkVersion 33
-        versionCode 1001001006
-        versionName "1.1.1.6"
+        minSdk 28
+        targetSdk 34
+        versionCode 1001001008
+        versionName "1.1.1.8"
         // Enabling multidex support.
         multiDexEnabled true
         flavorDimensions "versionCode"
+        renderscriptTargetApi 18
+        renderscriptSupportModeEnabled true
+    }
+    tasks.withType(JavaCompile).configureEach {
+        options.fork = true
+        options.forkOptions.jvmArgs += [
+                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+    buildFeatures {
+        viewBinding true
     }
     dexOptions {
 //        incremental true
         preDexLibraries true
         javaMaxHeapSize "4g"
     }
-
     lintOptions {
         disable 'InvalidPackage'
+        checkReleaseBuilds false
+        abortOnError false
     }
+
+
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/maven/com.squareup.okhttp/okhttp/pom.xml'
@@ -43,9 +65,9 @@ android {
     }
     signingConfigs {
         config {
-            keyAlias 'myapp'
+            keyAlias 'themass'
             keyPassword 'themass'
-            storeFile file('/Users/gqli/soft/myapp')
+            storeFile file('/Users/liguoqing/soft/myapp/key')
             storePassword 'themass'
         }
 //        config {
@@ -80,9 +102,9 @@ android {
     }
 }
 greendao {
-    schemaVersion 3
-    daoPackage 'com.ping.greendao.gen'
-    targetGenDir 'src/main/java'
+    schemaVersion 6
+//    daoPackage 'com.ping.greendao.gen'
+//    targetGenDir 'src/main/java'
 }
 dependencies {
 
@@ -91,30 +113,34 @@ dependencies {
 
 //    implementation 'cn.jzvd:jiaozivideoplayer:6.2.12'
 //    implementation(name: 'glide-transformations-2.0.1', ext: 'aar',)
-    implementation "androidx.appcompat:appcompat:1.1.0"
+    implementation "androidx.appcompat:appcompat:1.6.1"
     implementation "androidx.legacy:legacy-support-v13:1.0.0"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "androidx.palette:palette:1.0.0"
     implementation "androidx.recyclerview:recyclerview"
     implementation "androidx.cardview:cardview"
-//    implementation "com.google.android.material:material:1.5.0-alpha01"
-    api 'com.google.android.material:material:1.1.0-alpha06'
-
+//material 版本不能动，会影响kotlin版本
+    implementation 'com.google.android.material:material:1.4.0'
+    annotationProcessor 'androidx.annotation:annotation:1.8.0'
     implementation "androidx.percentlayout:percentlayout:1.0.0"
-    implementation "com.android.support:multidex:1.0.1"
-    implementation 'com.jakewharton:butterknife:10.2.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.15.1'
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
+
+
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+    implementation 'com.jakewharton:butterknife:10.2.3'
     implementation 'com.jakewharton:disklrucache:2.0.2'
-    //3.4.1
-    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
-    implementation 'com.github.bumptech.glide:glide:4.0.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.0.0'
-    implementation 'jp.wasabeef:glide-transformations:2.0.2'
+//    implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'
+
     // If you want to use the GPU Filters
     implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
-    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'org.greenrobot:eventbus:3.0.0'
     implementation 'org.greenrobot:greendao:3.3.0'
 
@@ -134,6 +160,7 @@ dependencies {
 //    implementation 'com.mbridge.msdk.oversea:mbsplash:16.4.31'
 //    implementation 'com.mbridge.msdk.oversea:mbbanner:16.4.31'
 //    implementation 'com.mbridge.msdk.oversea:newinterstitial:16.4.31'
-
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.0.2'
 
 }
